# diploma

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.test.yml  docker-compose.yml
.claude/agents/: fastapi-security-architect.md  react-security-demo-builder.md  security-test-designer.md  zero-trust-code-reviewer.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_account_status_and_number.py  0003_add_email_verification_token_hash.py  0004_unique_account_user_id.py  0005_add_password_reset_and_sent_at_columns.py  0006_encrypt_mfa_secret_at_rest.py
backend/app/: main.py
backend/app/accounts/: router.py  service.py
backend/app/admin/: router.py  service.py
backend/app/auth/: router.py  service.py
backend/app/core/: config.py  database.py  mfa_encryption.py  middleware.py  redis.py  security.py  totp.py
backend/app/dependencies/: auth.py  step_up.py
backend/app/models/: __init__.py  account.py  audit_log.py  refresh_token.py  security_event.py  transaction.py  user.py
backend/app/routers/: health.py
backend/app/schemas/: account.py  admin.py  auth.py  common.py  transaction.py  user.py
backend/app/transactions/: router.py  service.py
backend/app/users/: router.py
backend/tests/: conftest.py  helpers.py  test_accounts.py  test_admin.py  test_admin_mutate.py  test_api_denials.py  test_auth_login.py  test_auth_logout.py  test_auth_mfa.py  test_auth_password.py  test_auth_refresh.py  test_auth_register.py  test_e2e_auth_lifecycle.py  test_get_current_user.py  test_health.py  test_rate_limiting.py  test_rbac.py  test_require_step_up.py  test_security.py  test_security_events.py  test_step_up.py  test_totp.py  test_transaction_history.py  test_transfers.py  test_users_me.py
docs/: API_SCOPE.md  ARCHITECTURE.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  MVP_SCOPE.md  PROJECT_OVERVIEW.md  SECURITY_REQUIREMENTS.md  TECHNICAL_DEBT.md  TECH_STACK.md  TEST_STRATEGY.md  THREAT_MODEL.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: main.tsx
nginx/: nginx.conf
postman/: README.md
postman/api-v1/: diploma-api-v1.postman_collection.json  endpoint-get-accounts-me.json  endpoint-get-admin-audit-logs.json  endpoint-get-admin-ping.json  endpoint-get-admin-security-events.json  endpoint-get-admin-users.json  endpoint-get-auth-verify-email.json  endpoint-get-health.json  endpoint-get-transactions-history.json  endpoint-get-users-me.json  endpoint-patch-admin-users-activate.json  endpoint-patch-admin-users-deactivate.json  endpoint-patch-admin-users-role.json  endpoint-post-admin-users-unlock.json  endpoint-post-auth-login.json  endpoint-post-auth-logout.json  endpoint-post-auth-mfa-disable.json  endpoint-post-auth-mfa-enable.json  endpoint-post-auth-mfa-setup.json  endpoint-post-auth-password-change.json  endpoint-post-auth-refresh.json  (+5 more)
(+53 files in other folders)
